[gd_scene load_steps=7 format=3 uid="uid://dj5oq3v871tqe"]

[ext_resource type="Script" path="res://modules/core/projectInterface/scripts/welcomeWindowCont.gd" id="1_d3xm6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ffpfr"]
bg_color = Color(0.647059, 0, 0.792157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qsb1b"]
bg_color = Color(0.152941, 0.152941, 0.152941, 1)

[sub_resource type="Gradient" id="Gradient_nkmyt"]
interpolation_mode = 2
colors = PackedColorArray(0.152941, 0.152941, 0.152941, 1, 0.670588, 0.0941176, 0.752941, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_e54ld"]
gradient = SubResource("Gradient_nkmyt")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_opvaw"]
texture = SubResource("GradientTexture1D_e54ld")

[node name="WelcomeWindowCont" type="Control"]
layout_mode = 3
anchor_right = 1.25
anchor_bottom = 1.5
offset_bottom = 3.99997
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d3xm6")

[node name="background" type="Panel" parent="."]
layout_mode = 0
offset_right = 500.0
offset_bottom = 112.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ffpfr")

[node name="lowerBG" type="Panel" parent="."]
layout_mode = 0
offset_top = 136.0
offset_right = 500.0
offset_bottom = 499.0
theme_override_styles/panel = SubResource("StyleBoxFlat_qsb1b")

[node name="gradient" type="Panel" parent="."]
layout_mode = 0
offset_top = 136.0
offset_right = 25.0
offset_bottom = 636.0
rotation = -1.5708
theme_override_styles/panel = SubResource("StyleBoxTexture_opvaw")

[node name="new" type="Button" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 144.0
offset_right = 248.0
offset_bottom = 175.0
text = "New"
flat = true

[node name="open" type="Button" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 176.0
offset_right = 248.0
offset_bottom = 207.0
text = "Open"
flat = true

[node name="recent" type="Button" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 208.0
offset_right = 248.0
offset_bottom = 240.0
text = "Recent"
flat = true

[node name="prName" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 240.0
offset_top = 144.0
offset_right = 464.0
offset_bottom = 175.0

[node name="Button" type="Button" parent="prName"]
layout_mode = 0
offset_left = 224.0
offset_right = 256.0
offset_bottom = 32.0

[connection signal="pressed" from="new" to="." method="newProj"]
[connection signal="pressed" from="open" to="." method="openProj"]
